interakcje: pierwszy stage
breaking zmiana: bump javy do 11, wywalenie starego managera komend (nowy roboczo nazwany); większość komend trzeba przepisać

mechanizm unloadowania również nie jest ogarnięty, innymi słowy - to jest na tyle work in progress by można było zacząć migrować komendy, ale nie używać tego